# perchstation

./: .gitignore  CLAUDE.md  CODE_REVIEW_perchstation-core.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/hooks/: cargo-attempts-logger.sh
.claude/scripts/: generate-reasoning.sh
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/perchstation/: Cargo.toml
crates/perchstation-core/: Cargo.toml
crates/perchstation-core/src/: config.rs  fsutil.rs  hw_traits.rs  identity.rs  lib.rs  supervision.rs  tls.rs
crates/perchstation-core/src/capture/: cooldown.rs  liveness.rs  mod.rs  recording.rs  runner.rs  staging.rs  state.rs
crates/perchstation-core/src/delivery/: classify.rs  mod.rs  retry.rs  runner.rs  test_support.rs
crates/perchstation-core/src/enrollment/: confirm.rs  csr.rs  file_source.rs  mod.rs
crates/perchstation-core/src/observability/: mod.rs  status.rs  tracing.rs
crates/perchstation-core/src/perchpub/: client.rs  mod.rs  types.rs
crates/perchstation-core/src/queue/: inbox.rs  mod.rs  policy.rs  store.rs
crates/perchstation-hw/: Cargo.toml
crates/perchstation-hw/src/: camera_qr.rs  camera_recorder.rs  capture_config.rs  clock.rs  lib.rs  motion_sensor.rs
crates/perchstation/src/: cli.rs  main.rs
crates/perchstation/src/commands/: enroll.rs  mod.rs  serve.rs  status.rs
deploy/: CAMERA-LESS-TEST.md  DEPLOYMENT.md  RELEASE-CHECKLIST.md  config.example.toml  gate-run-2026-06-18.md
deploy/systemd/: perchstation.service
docs/: 001-clip-delivery-ci-flake-debugging.md  001-clip-delivery-retrospective.md  002-capture-subsystem-retrospective.md  perchstation-csr-contract.md  perchstation-enrollment-qr-contract.md
openspec/changes/cert-contract-conformance/: README.md  design.md  proposal.md  tasks.md
openspec/changes/cert-contract-conformance/specs/device-cert-conformance/: spec.md
openspec/changes/cert-renewal/: README.md  design.md  proposal.md  tasks.md
openspec/changes/cert-renewal/specs/cert-renewal/: spec.md
openspec/changes/status-capture-surface/: README.md  design.md  proposal.md  tasks.md
openspec/changes/status-capture-surface/specs/capture-status-surface/: spec.md
references/: openapi.json
specs/001-clip-delivery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-clip-delivery/checklists/: requirements.md
specs/001-clip-delivery/contracts/: cli.md  log-events.md  perchpub-api.md
specs/002-capture-subsystem/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-capture-subsystem/checklists/: requirements.md
specs/002-capture-subsystem/contracts/: cli.md  hw-traits.md  log-events.md
tests/contract/: openapi_sync.rs
tests/integration/: capture_bounded_clip.rs  capture_camera_hang.rs  capture_concurrent_event.rs  capture_cooldown.rs  capture_disk_pressure.rs  capture_happy.rs  capture_idle.rs  capture_isolation.rs  capture_no_network.rs  capture_purge_report_threading.rs  capture_queue_full.rs  capture_recording_failure.rs  capture_recording_id_threading.rs  capture_resilience.rs  capture_staging_probe_failed.rs  capture_status_surface.rs  capture_stuck_sensor.rs  capture_unavailable_sensor.rs  clock_skew_tolerance.rs  crash_recovery.rs  delivery_happy.rs  enrollment_happy.rs  enrollment_session_expired.rs  log_redaction.rs  outage_recovery.rs  outbound_allowlist.rs  permanent_failure.rs  queue_eviction.rs  queue_eviction_race.rs  reenroll_conflict.rs  status_surface.rs  upload_full_chain_mtls.rs  wire_client.rs
tests/integration/fixtures/: README.md
tests/integration/support/: fake_camera.rs  fake_clock.rs  fake_motion_sensor.rs  fake_qr.rs  fakepub.rs  fixtures.rs  harness.rs  logs.rs  mod.rs
