[package]
name          = "perchstation-core"
description   = "Platform-agnostic delivery, enrollment, queue, perchpub client, and observability for the perchstation."
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
version.workspace      = true

[dependencies]
tokio                = { workspace = true }
tokio-util           = { workspace = true }
reqwest              = { workspace = true }
rustls               = { workspace = true }
rustls-pemfile       = { workspace = true }
rcgen                = { workspace = true }
rqrr                 = { workspace = true }
image                = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
toml                 = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
anyhow               = { workspace = true }
thiserror            = { workspace = true }
uuid                 = { workspace = true }
chrono               = { workspace = true }
x509-parser          = { workspace = true }
async-trait          = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
qrcode   = { workspace = true }
tokio    = { workspace = true }

[lints]
workspace = true
