[package]
name          = "perchstation"
description   = "The perchstation binary: enrollment, delivery loop, and operator status surface."
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
version.workspace      = true

[[bin]]
name = "perchstation"
path = "src/main.rs"

[[bin]]
name = "fakepub"
path = "src/bin/fakepub.rs"

# Dev-only helper: mint an enrollment QR PNG from a perchpub
# `/enrollment/create` response plus a CA chain, so a camera-less host can
# enrol with `enroll --qr-source file`. Not shipped in release artefacts.
[[bin]]
name = "mint-enroll-qr"
path = "src/bin/mint-enroll-qr.rs"

# Workspace-root contract tests live under `tests/contract/`. Each file is
# attached individually here so `cargo test --workspace` picks them up.
[[test]]
name              = "openapi_sync"
path              = "../../tests/contract/openapi_sync.rs"
harness           = true

# Workspace-root integration tests live under `tests/integration/`. Each
# file is its own test binary; shared helpers live under
# `tests/integration/support/` and each test file does
# `#[path = "support/mod.rs"] mod support;`.
[[test]]
name    = "enrollment_happy"
path    = "../../tests/integration/enrollment_happy.rs"
harness = true

[[test]]
name    = "delivery_happy"
path    = "../../tests/integration/delivery_happy.rs"
harness = true

[[test]]
name    = "wire_client"
path    = "../../tests/integration/wire_client.rs"
harness = true

[[test]]
name    = "reenroll_conflict"
path    = "../../tests/integration/reenroll_conflict.rs"
harness = true

[[test]]
name    = "enrollment_session_expired"
path    = "../../tests/integration/enrollment_session_expired.rs"
harness = true

[[test]]
name    = "outage_recovery"
path    = "../../tests/integration/outage_recovery.rs"
harness = true

[[test]]
name    = "queue_eviction"
path    = "../../tests/integration/queue_eviction.rs"
harness = true

[[test]]
name    = "queue_eviction_race"
path    = "../../tests/integration/queue_eviction_race.rs"
harness = true

[[test]]
name    = "permanent_failure"
path    = "../../tests/integration/permanent_failure.rs"
harness = true

[[test]]
name    = "crash_recovery"
path    = "../../tests/integration/crash_recovery.rs"
harness = true

[[test]]
name    = "clock_skew_tolerance"
path    = "../../tests/integration/clock_skew_tolerance.rs"
harness = true

[[test]]
name    = "status_surface"
path    = "../../tests/integration/status_surface.rs"
harness = true

[[test]]
name    = "outbound_allowlist"
path    = "../../tests/integration/outbound_allowlist.rs"
harness = true

[[test]]
name    = "log_redaction"
path    = "../../tests/integration/log_redaction.rs"
harness = true

[[test]]
name    = "capture_happy"
path    = "../../tests/integration/capture_happy.rs"
harness = true

[[test]]
name    = "capture_bounded_clip"
path    = "../../tests/integration/capture_bounded_clip.rs"
harness = true

[[test]]
name    = "capture_idle"
path    = "../../tests/integration/capture_idle.rs"
harness = true

[[test]]
name    = "capture_cooldown"
path    = "../../tests/integration/capture_cooldown.rs"
harness = true

[[test]]
name    = "capture_stuck_sensor"
path    = "../../tests/integration/capture_stuck_sensor.rs"
harness = true

[[test]]
name    = "capture_unavailable_sensor"
path    = "../../tests/integration/capture_unavailable_sensor.rs"
harness = true

[[test]]
name    = "capture_recording_failure"
path    = "../../tests/integration/capture_recording_failure.rs"
harness = true

[[test]]
name    = "capture_disk_pressure"
path    = "../../tests/integration/capture_disk_pressure.rs"
harness = true

[[test]]
name    = "capture_staging_probe_failed"
path    = "../../tests/integration/capture_staging_probe_failed.rs"
harness = true

[[test]]
name    = "capture_queue_full"
path    = "../../tests/integration/capture_queue_full.rs"
harness = true

[[test]]
name    = "capture_resilience"
path    = "../../tests/integration/capture_resilience.rs"
harness = true

[[test]]
name    = "capture_camera_hang"
path    = "../../tests/integration/capture_camera_hang.rs"
harness = true

[[test]]
name    = "capture_concurrent_event"
path    = "../../tests/integration/capture_concurrent_event.rs"
harness = true

[[test]]
name    = "capture_isolation"
path    = "../../tests/integration/capture_isolation.rs"
harness = true

[[test]]
name    = "capture_status_surface"
path    = "../../tests/integration/capture_status_surface.rs"
harness = true

[[test]]
name    = "capture_no_network"
path    = "../../tests/integration/capture_no_network.rs"
harness = true

[[test]]
name    = "capture_recording_id_threading"
path    = "../../tests/integration/capture_recording_id_threading.rs"
harness = true

[[test]]
name    = "capture_purge_report_threading"
path    = "../../tests/integration/capture_purge_report_threading.rs"
harness = true

[dependencies]
perchstation-core = { path = "../perchstation-core" }
perchstation-hw   = { path = "../perchstation-hw" }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
clap              = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
sd-notify         = { workspace = true }
chrono            = { workspace = true }

# Dev-only deps used by the fakepub binary. These are listed in
# [dependencies] (not [dev-dependencies]) because Cargo only resolves
# dev-dependencies for the package's own tests/examples/benches — binaries
# need their deps in [dependencies] proper.
axum         = { workspace = true }
axum-server  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
rcgen        = { workspace = true }
rustls       = { workspace = true }
rustls-pemfile = { workspace = true }
# Used by the mint-enroll-qr helper bin to render the enrollment QR PNG.
qrcode       = { workspace = true }
image        = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
wiremock   = { workspace = true }
reqwest    = { workspace = true }
qrcode     = { workspace = true }
image      = { workspace = true }
chrono     = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
axum       = { workspace = true }
axum-server = { workspace = true }
rcgen      = { workspace = true }
rustls     = { workspace = true }
rustls-pemfile = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
